<resources>
    <string name="app_name">CalculadoraNutricion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calculadora">Calculadora</string>

    <string name="calculadadora_hint_ingrese_un_valor">Ingrese un valor</string>
    <string name="calculadora_btn_txt_calcular">Calcular</string>
    <string name="calculadora_hint_esperando_valor">Esperando valor...</string>
    <string name="ingrese_un_numero_valido">Por favor, ingrese un número válido</string>
    <string name="ic_menu_calculadora_main_container">Calculadora\n</string>
</resources>