<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:visible="true"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            android:visible="false"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:visible="false" />
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calculadora"
            android:visible="false"/>
        <item
            android:id="@+id/nav_calculadora_main_container"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ic_menu_calculadora_main_container"
            android:visible="true"/>
    </group>
</menu>